new endpoint to get alerted ingredients
