# db/schema.rb
@@ -10,7 +10,8 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2021_06_23_211145) do
+ActiveRecord::Schema.define(version: 2021_06_24_005920) do
+
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -23,11 +24,9 @@ ActiveRecord::Schema.define(version: 2021_06_23_211145) do
     t.bigint "author_id"
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
-    t.index ["author_type", "author_id"],
-            name: "index_active_admin_comments_on_author_type_and_author_id"
+    t.index ["author_type", "author_id"], name: "index_active_admin_comments_on_author_type_and_author_id"
     t.index ["namespace"], name: "index_active_admin_comments_on_namespace"
-    t.index ["resource_type", "resource_id"],
-            name: "index_active_admin_comments_on_resource_type_and_resource_id"
+    t.index ["resource_type", "resource_id"], name: "index_active_admin_comments_on_resource_type_and_resource_id"
   end
 
   create_table "admin_users", force: :cascade do |t|
@@ -39,8 +38,7 @@ ActiveRecord::Schema.define(version: 2021_06_23_211145) do
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
     t.index ["email"], name: "index_admin_users_on_email", unique: true
-    t.index ["reset_password_token"], name: "index_admin_users_on_reset_password_token",
-                                      unique: true
+    t.index ["reset_password_token"], name: "index_admin_users_on_reset_password_token", unique: true
   end
 
   create_table "ingredient_measures", force: :cascade do |t|
@@ -51,8 +49,6 @@ ActiveRecord::Schema.define(version: 2021_06_23_211145) do
     t.datetime "updated_at", precision: 6, null: false
     t.boolean "primary", default: false
     t.index ["ingredient_id"], name: "index_ingredient_measures_on_ingredient_id"
-    t.index ["name", "ingredient_id"], name: "index_ingredient_measures_on_name_and_ingredient_id",
-                                       unique: true
   end
 
   create_table "ingredients", force: :cascade do |t|
@@ -65,6 +61,7 @@ ActiveRecord::Schema.define(version: 2021_06_23_211145) do
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
     t.float "inventory", default: 0.0
+    t.float "minimum_quantity"
     t.index ["provider_id"], name: "index_ingredients_on_provider_id"
     t.index ["user_id"], name: "index_ingredients_on_user_id"
   end
